--- a/deployment/templates/deployment/assign_team_location.html
+++ b/deployment/templates/deployment/assign_team_location.html
@@ -25,21 +25,25 @@
                        {{form.team}}
                </div>
                <div class="field">
-                   <label>Location</label>
-                       {{form.location}}
-               </div>
+                <label>Team</label>
+                    {{form.team_leader}}
+              </div>
              </div>
+             <div class="field">
+                <label>Location</label>
+                    {{form.location}}
+            </div>
              <div class="three fields">
                   <div class="field">
-                      <label>Number of Explosives needed</label>
+                      <label>Number of EDD needed</label>
                       {{form.EDD_demand}}
                   </div>
                   <div class="field">
-                      <label>Number of Narcotics needed</label>
+                      <label>Number of NDD needed</label>
                       {{form.NDD_demand}}
                   </div>
                   <div class="field">
-                      <label>Number of Search and Rescue needed</label>
+                      <label>Number of SAR needed</label>
                       {{form.SAR_demand}}
                   </div>
              </div>
