--- a/deployment/templates/deployment/team_location_details.html
+++ b/deployment/templates/deployment/team_location_details.html
@@ -11,122 +11,236 @@
         <div class="ui green message"> {{ message }}</div>
     {% endfor %}
 {% endif %}
-<div class="ui top attached tabular menu">
-    <a class="item active" data-tab="first">Details</a>
-    <a class="item" data-tab="second">Deploy K9's</a>
-    <a class="item" data-tab="third">History</a>
-</div>
-
-<div class="ui tab segment active" data-tab="first">
-  <div class="ui raised segment">
-    <table class="ui four column very basic table" style="width:50%;">
-      <tr>
-        <td><strong>Area: </strong>{{data.location.area}}</td>
-        <td><strong>City: </strong>{{data.location.city}}</td>
-        <td><strong>Place: </strong>{{data.location.place}}</td>
-          <td><a href="{% url 'deployment:edit_team' data.id %}" class="ui basic blue button">Edit</a></td>
-      </tr>
-    </table>
+<div class="ui inverted raised segment">
+    <form action="" class="ui inverted form">
+      <div class= 'four fields'>
+        <div class="field">
+          <label>Area</label>
+          <input type="text" value="{{data.location.area}}" readonly>
+        </div>
+        <div class="field">
+            <label>City</label>
+            <input type="text" value="{{data.location.city}}" readonly>
+          </div>
+          <div class="field"></div>
+          <div class="right aligned">
+              <br>
+              <a href="{% url 'deployment:edit_team' data.id %}" class="ui blue button">Edit</a>
+          </div>
+      </div>
+      <div class="field">
+          <label>Place</label>
+          <input type="text" value="{{data.location.place}}" readonly>
+        </div>
+    </form>
   </div>
+
   <div class="row">
-    <div class="column">
-      <div class="ui basic horizontal segments" style="border-style: none;">
-       <div class="ui basic segment" style="border-style: none;">
-         <label>No. of K9 Demand: </label>
-         {% if data.total_dogs_deployed >= data.total_dogs_demand %}
-             <span class="ui green circular label">{{data.total_dogs_demand}}</span>
-         {%else%}
-             <span class="ui red circular label">{{data.total_dogs_demand}}</span>
-         {% endif %}
-         <table class="ui three column celled red table">
-           <thead>
-             <tr>
-               <th>EDD Demand</th>
-               <th>NDD Demand</th>
-               <th>SAR Demand</th>
-             </tr>
-           </thead>
-           <tbody>
-             <tr>
-               <td>{{data.EDD_demand}}</td>
-               <td>{{data.NDD_demand}}</td>
-               <td>{{data.SAR_demand}}</td>
-             </tr>
-           </tbody>
-         </table>
-       </div>
-       <div class="ui basic segment" style="border-style: none;">
-         <label>No. of K9 Deployed: </label>
-         {% if data.total_dogs_deployed >= data.total_dogs_demand %}
-             <span class="ui green circular label">{{data.total_dogs_deployed}}</span>
-         {%else%}
-             <span class="ui orange circular label">{{data.total_dogs_deployed}}</span>
-         {% endif %}
-         <table class="ui three column celled orange table">
-           <thead>
-             <tr>
-               <th>EDD Deployed</th>
-               <th>NDD Deployed</th>
-               <th>SAR Deployed</th>
-             </tr>
-           </thead>
-           <tbody>
-             <tr>
-               <td>{{data.EDD_deployed}}</td>
-               <td>{{data.NDD_deployed}}</td>
-               <td>{{data.SAR_deployed}}</td>
-             </tr>
-           </tbody>
-         </table>
-       </div>
+      <div class="column">
+        <div class="ui basic horizontal segments" style="border-style: none;">
+         <div class="ui basic segment" style="border-style: none;">
+           <label>No. of K9 Demand: </label>
+           {% if data.total_dogs_deployed >= data.total_dogs_demand %}
+               <span class="ui green circular label">{{data.total_dogs_demand}}</span>
+           {%else%}
+               <span class="ui red circular label">{{data.total_dogs_demand}}</span>
+           {% endif %}
+           <table class="ui three column celled red table">
+             <thead>
+               <tr>
+                 <th>EDD Demand</th>
+                 <th>NDD Demand</th>
+                 <th>SAR Demand</th>
+               </tr>
+             </thead>
+             <tbody>
+               <tr>
+                 <td>{{data.EDD_demand}}</td>
+                 <td>{{data.NDD_demand}}</td>
+                 <td>{{data.SAR_demand}}</td>
+               </tr>
+             </tbody>
+           </table>
+         </div>
+         <div class="ui basic segment" style="border-style: none;">
+           <label>No. of K9 Deployed: </label>
+           {% if data.total_dogs_deployed >= data.total_dogs_demand %}
+               <span class="ui green circular label">{{data.total_dogs_deployed}}</span>
+           {%else%}
+               <span class="ui orange circular label">{{data.total_dogs_deployed}}</span>
+           {% endif %}
+           <table class="ui three column celled orange table">
+             <thead>
+               <tr>
+                 <th>EDD Deployed</th>
+                 <th>NDD Deployed</th>
+                 <th>SAR Deployed</th>
+               </tr>
+             </thead>
+             <tbody>
+               <tr>
+                 <td>{{data.EDD_deployed}}</td>
+                 <td>{{data.NDD_deployed}}</td>
+                 <td>{{data.SAR_deployed}}</td>
+               </tr>
+             </tbody>
+           </table>
+         </div>
+        </div>
       </div>
     </div>
-  </div>
-
 
     <div class="ui basic segment">
-    <label> No. of Incidents Related to</label>
-        <div class="ui statistics">
-
-         <div class="statistic">
-    <div class="value">
-      <i class="binoculars icon"></i> {{sar_inc}}
-    </div>
-    <div class="label">
-      Search and Rescue
-    </div>
-  </div>
-
-        <div class="statistic">
-    <div class="value">
-      <i class="pills icon"></i> {{ndd_inc}}
-    </div>
-    <div class="label">
-      Narcotics
-    </div>
-  </div>
-
-         <div class="statistic">
-    <div class="value">
-      <i class="bomb icon"></i> {{edd_inc}}
-    </div>
-    <div class="label">
-      Explosives
-    </div>
-  </div>
-
-
+        <label> No. of Incidents Related to</label>
+            <div class="ui statistics">
+    
              <div class="statistic">
-    <div class="value">
-      <i class="star outline icon"></i>{{incidents}}
-    </div>
-    <div class="label">
-      All Types
-    </div>
+        <div class="value">
+          <i class="binoculars icon"></i> {{sar_inc}}
+        </div>
+        <div class="label">
+          Search and Rescue
+        </div>
+      </div>
+    
+            <div class="statistic">
+        <div class="value">
+          <i class="pills icon"></i> {{ndd_inc}}
+        </div>
+        <div class="label">
+          Narcotics
+        </div>
+      </div>
+    
+             <div class="statistic">
+        <div class="value">
+          <i class="bomb icon"></i> {{edd_inc}}
+        </div>
+        <div class="label">
+          Explosives
+        </div>
+      </div>
+    
+    
+        <div class="statistic">
+          <div class="value">
+            <i class="star outline icon"></i>{{incidents}}
+          </div>
+          <div class="label">
+            All Types
+          </div>
+        </div>
+    
+            </div>
+        </div>
+
+<div class="ui top attached tabular menu">
+    <a class="item active" data-tab="first">Deploy K9's</a>
+    <a class="item" data-tab="second">Details</a>
+    <a class="item" data-tab="third">History</a>
+</div>
+<div class="ui tab segment active" data-tab="first">
+
+    <div class="ui info message">
+<i class="close icon"></i>
+<div class="header">
+  <i class="question icon"></i> Information
+</div>
+<ul class="list">
+  <li>Below is a list of available K9s that are not currently deployed and currently deployed in other ports.</li>
+    <li>If a K9 has a scheduled request, it will be automatically deployed on the date of request at the location of the request.</li>
+    <li>After a request has beem completed, the team is brought back to the last known deployment location.</li>
+</ul>
+</div>
+
+
+  <div class="ui top attached tabular menu">
+      <a class="item active" data-tab="fourth">From PCGK9 Taguig Base</a>
+      <a class="item" data-tab="fifth">From Other Ports</a>
   </div>
 
-        </div>
+  <div class="ui tab segment active " data-tab="fourth">
+<form class="ui form" method="POST">
+  {% csrf_token %}
+  <table id="tabledata2" class="ui seven column celled table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name:SN#</th>
+            <th>Capability</th>
+            <th>Handler</th>
+            <th>Distance</th>
+            <th>Days Before Next Scheduled Request</th>
+            <th>View Schedules</th>
+          </tr>
+      </thead>
+      <tbody>
+
+          {% for can_deploy in can_deploy %}
+          <tr class="ui center aligned">
+            <td class="two wide">
+              <input type="checkbox" name="checks" value="{{can_deploy.id}}">
+            </td>
+            <td>{{can_deploy}}</td>
+            <td>{{can_deploy.capability}}</td>
+            <td>{{can_deploy.handler}}</td>
+            <td>{{can_deploy|calculate_distance_from_current_team:can_deploy.id}} miles</td>
+            <td>{{can_deploy|days_before_next_request:forloop.counter0}}</td>
+            <td><a href="{% url 'deployment:view_schedule' can_deploy.id %}">View Schedule</a></td>
+          </tr>
+            {% endfor %}
+
+      </tbody>
+  </table>
     </div>
+
+    <div class="ui tab segment" data-tab="fifth">
+        <table id="tabledata4" class="ui nine column celled table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name:SN#</th>
+            <th>Capability</th>
+            <th>Handler</th>
+            <th>Current Location</th>
+            <th>Distance(current location)</th>
+            <th>Number of Incidents (current location)</th>
+            <th>Days Before Next Scheduled Request</th>
+            <th>View Schedules</th>
+          </tr>
+      </thead>
+      <tbody>
+
+          {% for can_transfer in can_transfer %}
+          <tr class="ui center aligned">
+            <td class="one wide">
+              <input type="checkbox" name="checks" value="{{can_transfer.id}}">
+            </td>
+            <td>{{can_transfer.name}}</td>
+            <td>{{can_transfer.serial_number}}</td>
+            <td class="two wide">{{can_transfer.capability}}</td>
+            <td>{{can_transfer.handler}}</td>
+            <td>{{can_transfer|current_location:forloop.counter0}}</td>
+            <td>{{can_transfer|calculate_distance_from_current_team:data.id}} miles</td>
+            <td>{{can_transfer|incident_count:forloop.counter0}}</td>
+            <td>{{can_transfer|days_before_next_request:forloop.counter0}}</td>
+            <td><a href="{% url 'deployment:view_schedule' can_transfer.id %}">View Schedule</a></td>
+          </tr>
+            {% endfor %}
+
+      </tbody>
+  </table>
+    </div>
+
+  <div class="ui basic center aligned segment" style="padding: 0px;">
+      <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Deploy</button>
+  </div>
+</form>
+
+</div>
+
+
+<div class="ui tab segment" data-tab="second">
 
 <h2 class="ui header">
     <i class="paw icon"></i>
@@ -160,177 +274,6 @@
  </table>
 </div>
 
-<div class="ui tab segment" data-tab="second">
-
- <div class="ui raised segment">
-    <table class="ui four column very basic table" style="width:50%;">
-      <tr>
-        <td><strong>Area: </strong>{{data.location.area}}</td>
-        <td><strong>City: </strong>{{data.location.city}}</td>
-        <td><strong>Place: </strong>{{data.location.place}}</td>
-          <td><a href="{% url 'deployment:edit_team' data.id %}" class="ui basic blue button">Edit</a></td>
-      </tr>
-    </table>
-  </div>
-  <div class="row">
-    <div class="column">
-      <div class="ui basic horizontal segments" style="border-style: none;">
-       <div class="ui basic segment" style="border-style: none;">
-         <label>No. of K9 Demand: </label>
-         {% if data.total_dogs_deployed >= data.total_dogs_demand %}
-             <span class="ui green circular label">{{data.total_dogs_demand}}</span>
-         {%else%}
-             <span class="ui red circular label">{{data.total_dogs_demand}}</span>
-         {% endif %}
-         <table class="ui three column celled red table">
-           <thead>
-             <tr>
-               <th>EDD Demand</th>
-               <th>NDD Demand</th>
-               <th>SAR Demand</th>
-             </tr>
-           </thead>
-           <tbody>
-             <tr>
-               <td>{{data.EDD_demand}}</td>
-               <td>{{data.NDD_demand}}</td>
-               <td>{{data.SAR_demand}}</td>
-             </tr>
-           </tbody>
-         </table>
-       </div>
-       <div class="ui basic segment" style="border-style: none;">
-         <label>No. of K9 Deployed: </label>
-         {% if data.total_dogs_deployed >= data.total_dogs_demand %}
-             <span class="ui green circular label">{{data.total_dogs_deployed}}</span>
-         {%else%}
-             <span class="ui orange circular label">{{data.total_dogs_deployed}}</span>
-         {% endif %}
-         <table class="ui three column celled orange table">
-           <thead>
-             <tr>
-               <th>EDD Deployed</th>
-               <th>NDD Deployed</th>
-               <th>SAR Deployed</th>
-             </tr>
-           </thead>
-           <tbody>
-             <tr>
-               <td>{{data.EDD_deployed}}</td>
-               <td>{{data.NDD_deployed}}</td>
-               <td>{{data.SAR_deployed}}</td>
-             </tr>
-           </tbody>
-         </table>
-       </div>
-      </div>
-    </div>
-  </div>
-
-      <div class="ui info message">
-  <i class="close icon"></i>
-  <div class="header">
-    <i class="question icon"></i> Information
-  </div>
-  <ul class="list">
-    <li>Below is a list of available K9s that are not currently deployed and currently deployed in other ports.</li>
-      <li>If a K9 has a scheduled request, it will be automatically deployed on the date of request at the location of the request.</li>
-      <li>After a request has beem completed, the team is brought back to the last known deployment location.</li>
-  </ul>
-</div>
-
-
-    <div class="ui top attached tabular menu">
-        <a class="item active" data-tab="fourth">From PCGK9 Taguig Base</a>
-        <a class="item" data-tab="fifth">From Other Ports</a>
-    </div>
-
-
-  <form class="ui form" method="POST">
-    {% csrf_token %}
-      <div class="ui tab active segment" data-tab="fourth">
-    <table id="tabledata2" class="ui eight column celled table">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Name</th>
-              <th>Serial Number</th>
-              <th>Capability</th>
-              <th>Handler</th>
-                <th>Distance</th>
-                <th>Days Before Next Scheduled Request</th>
-                <th>View Schedules</th>
-            </tr>
-        </thead>
-        <tbody>
-
-            {% for can_deploy in can_deploy %}
-            <tr class="ui center aligned">
-              <td style="width:10%;">
-                <input type="checkbox" name="checks" value="{{can_deploy.id}}">
-              </td>
-              <td style="width:22%;">{{can_deploy.name}}</td>
-              <td style="width:22%;">{{can_deploy.serial_number}}</td>
-              <td style="width:22%;">{{can_deploy.capability}}</td>
-              <td style="width:22%;">{{can_deploy.handler}}</td>
-                <td style="width:22%;">{{can_deploy|calculate_distance_from_current_team:data.id}} miles</td>
-                <td>{{can_deploy|days_before_next_request:forloop.counter0}}</td>
-                <td><a href="{% url 'deployment:view_schedule' can_deploy.id %}">View Schedule</a></td>
-            </tr>
-              {% endfor %}
-
-        </tbody>
-    </table>
-      </div>
-
-      <div class="ui tab segment" data-tab="fifth">
-          <table id="tabledata4" class="ui ten column celled table">
-          <thead>
-            <tr>
-              <th></th>
-              <th>Name</th>
-              <th>Serial Number</th>
-              <th>Capability</th>
-              <th>Handler</th>
-                <th>Current Location</th>
-                <th>Distance(current location)</th>
-                <th>Number of Incidents (current location)</th>
-                <th>Days Before Next Scheduled Request</th>
-                <th>View Schedules</th>
-            </tr>
-        </thead>
-        <tbody>
-
-            {% for can_transfer in can_transfer %}
-            <tr class="ui center aligned">
-              <td style="width:10%;">
-                <input type="checkbox" name="checks" value="{{can_transfer.id}}">
-              </td>
-              <td style="width:22%;">{{can_transfer.name}}</td>
-              <td style="width:22%;">{{can_transfer.serial_number}}</td>
-              <td style="width:22%;">{{can_transfer.capability}}</td>
-              <td style="width:22%;">{{can_transfer.handler}}</td>
-                <td style="width:22%;">{{can_transfer|current_location:forloop.counter0}}</td>
-                <td style="width:22%;">{{can_transfer|calculate_distance_from_current_team:data.id}} miles</td>
-                <td>{{can_transfer|incident_count:forloop.counter0}}</td>
-                <td>{{can_transfer|days_before_next_request:forloop.counter0}}</td>
-                <td><a href="{% url 'deployment:view_schedule' can_transfer.id %}">View Schedule</a></td>
-            </tr>
-              {% endfor %}
-
-        </tbody>
-    </table>
-      </div>
-
-    <div class="ui basic center aligned segment" style="padding: 0px;">
-        <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Deploy</button>
-    </div>
-  </form>
-
-</div>
-
-
-
 <div class="ui tab segment" data-tab="third">
   <table id="tabledata3" class="ui five column celled table">
         <thead>
@@ -343,7 +286,7 @@
           </tr>
       </thead>
       <tbody>
-          {% for dogs_pulled in team_dog_deployed %}
+          {% for dogs_pulled in dogs_pulled %}
           <tr class="ui center aligned">
             <td>{{dogs_pulled.k9.name}}</td>
             <td>{{dogs_pulled.k9.serial_number}}</td>
