--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -3,11 +3,6 @@
 {% block sidebar%}
     <div class="ui bottom attached segment pushable">
         <div class="ui inverted labeled icon left inline vertical sidebar menu" id = "sidebar" >
-            {% if request.session.session_user_position == "Handler" %}
-            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
-            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
-            <a class="item" href="{% url 'unitmanagement:request_form'%}"><i class="folder open icon"></i>Unit Management</a>
-            {% endif %}
 
             {% if request.session.session_user_position == "Administrator" %}
             <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
@@ -16,25 +11,36 @@
             <a class="item" href="{% url 'deployment:assigned_location_list'%}"><i class="road icon"></i>Deployment</a>
             <a class="item" href="{% url 'training:training_records'%}"><i class="paw icon"></i>Training</a>
             <a class="item" href="{% url 'inventory:medicine_inventory_list'%}"><i class="warehouse icon"></i>Inventory</a>
-            <a class="item" href="{% url 'profiles:user_list'%}"><i class="folder open icon"></i>Unit Management</a>
-            {% endif %}
-
-            {% if request.session.session_user_position == "Veterinarian" %}
+            <a class="item" href="{% url 'profiles:user_list'%}"><i
+            class="folder open icon"></i>Unit Management</a>
+            
+            {% elif request.session.session_user_position == "Veterinarian" %}
             <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
             <a class="item" href="{% url 'inventory:medicine_inventory_list'%}"><i class="warehouse icon"></i>Inventory</a>
             <a class="item" href="{% url 'profiles:user_list'%}"><i class="folder open icon"></i>Unit Management</a>
             <a class="item" href="{% url 'training:adoption_list'%}"><i class="handshake icon"></i>Adoption</a>
+            
+            {% elif request.session.session_user_position == "Handler"%}
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
+            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
+            <a class="item" href="{% url 'unitmanagement:request_form'%}"><i class="folder open icon"></i>Unit Management</a>
+            
+            {% else %}
+            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
+            <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
+            <a class="item" href="{% url 'deployment:deployment_area_details'%}"><i class="folder open icon"></i>Unit Management</a>
+                        
             {% endif %}
-            <a class="item" href="{% url 'profiles:login'%}">Logout</a>
+
+            <a class="item" href="{% url 'profiles:logout'%}">Logout</a>
         </div>
         
         <!--html pages-->
         {% block sidebar_module %}
         {% endblock%}
 
-        <!--DASHBOARD-->
         {% block dashboard %}
         {% endblock%}
 
@@ -45,7 +51,6 @@
 {% block script%}
 <script>
     $(document).ready(function(){
-
         $( "#menu" ).on("click", function() {
             $('#sidebar').sidebar({
                 context: $('.bottom.segment')
