--- a/profiles/templates/profiles/sidebar_profile.html
+++ b/profiles/templates/profiles/sidebar_profile.html
@@ -5,7 +5,7 @@
     <div class="ui basic segment">
         <div class="ui grid">
             <div class="three wide column">
-                <!-- <div class="ui tiny pointing vertical menu" style="width:230px;">
+                <!-- <div class="ui pointing vertical menu">
                     <a class="item"> <b>Unit Management Menu</b></a>
 
                     <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
