--- a/profiles/templates/profiles/sidebar_adoption.html
+++ b/profiles/templates/profiles/sidebar_adoption.html
@@ -6,10 +6,10 @@
     <div class="ui basic segment">
         <div class="ui grid">
             <div class="three wide column">
-                    <div class="ui tiny pointing vertical menu" style="width:230px;">
+                    <div class="ui pointing vertical menu">
                         <a class="item"> <b>Adoption Menu</b></a>
-                        <a href="{% url 'training:adoption_list'%}" class="item">Adoption List
-                            <i class="list alternate icon"></i>
+                        <a href="{% url 'training:adoption_list'%}" class="item">
+                            <i class="list alternate icon"></i>Adoption List
                         </a>
                     </div>
             </div>
