--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -5,31 +5,28 @@
     <div class="ui basic segment">
         <div class="ui grid">
             <div class="three wide column">
-                    <div class="ui tiny pointing vertical menu" style="width:230px;">
+                    <div class="ui pointing vertical menu">
                         <a class="item"> <b>Deployment Menu</b></a>
-                        <a href="{% url 'deployment:add_area'%}" class="item">Add Area
-                            <i class="plus circle icon"></i>
+                        <a href="{% url 'deployment:add_area'%}" class="item">
+                            <i class="plus circle icon"></i>Add Area
                         </a>
-                        <a href="{% url 'deployment:add_location'%}" class="item">Add Location
-                            <i class="plus circle icon"></i>
+                        <a href="{% url 'deployment:add_location'%}" class="item">
+                            <i class="plus circle icon"></i>Add Location
                         </a>
-                        <a href="{% url 'deployment:assign_team_location'%}" class="item">Assign Team to Location
-                            <i class="hand point up icon"></i>
+                        <a href="{% url 'deployment:assign_team_location'%}" class="item">
+                            <i class="hand point up icon"></i>Assign Team to Location
                         </a>
-                        <a href="{% url 'deployment:assigned_location_list'%}" class="item">Team Location List View
-                            <i class="list alternate icon"></i>
+                        <a href="{% url 'deployment:assigned_location_list'%}" class="item">
+                            <i class="list alternate icon"></i>Team Location List
                         </a>
-                        <a href="{% url 'deployment:request_form'%}" class="item">Request K9 Form
-                            <i class="exclamation icon"></i>
+                        <a href="{% url 'deployment:request_form'%}" class="item">
+                            <i class="exclamation icon"></i>Request K9 Form
                         </a>
-                        <a href="{% url 'deployment:request_dog_list'%}" class="item">Request List
-                            <i class="clipboard list icon"></i>
+                        <a href="{% url 'deployment:request_dog_list'%}" class="item">
+                            <i class="clipboard list icon"></i>Request List
                         </a>
-                        <a href="{% url 'deployment:add_incident'%}" class="item">Incident Form
-                            <i class="clipboard list icon"></i>
-                        </a>
-                        <a href="{% url 'deployment:view_incidents'%}" class="item">Incident List View
-                            <i class="clipboard list icon"></i>
+                        <a href="{% url 'deployment:view_incidents'%}" class="item">
+                            <i class="clipboard list icon"></i>Incident List
                         </a>
                     </div>
             </div>
@@ -42,4 +39,10 @@
     </div>
 </div>
 
+<script>
+  $('.ui .item').on('click', function() {
+      $('.ui .item').removeClass('active');
+      $(this).addClass('active');
+   }); 
+</script>
 {% endblock%}
